Contribute toolbar z-index correction (under fancy box)
git-svn-id: svn://localhost/jahia/trunk@14929 69c369ed-ed09-0410-a4a1-e19a46c23626

--- a/modules/assets/src/main/webapp/css/contribute-toolbar.css
+++ b/modules/assets/src/main/webapp/css/contribute-toolbar.css
@@ -4,11 +4,11 @@
     background: #03399c url(img/contribute-toolbar-bg.png) no-repeat top right;
 	line-height:24px;
 	color:#FFF;
-    z-index:9000;
+    z-index:900;
 }
 #contributeToolbar #edit {
 
-    z-index:9010;
+    z-index:910;
 }
 #contributeToolbar span{
 	font-size:11px !important;
@@ -95,7 +95,7 @@
 #contributeToolbar .relative{
     position:relative;
     display:inline;
-    z-index:9020;
+    z-index:920;
 }
 #contributeToolbar .Actions {
     border: 1px solid #ccc;
@@ -106,7 +106,7 @@
     -webkit-box-shadow: 0 1px 3px #ccc;
     -moz-box-shadow: 0 1px 3px #ccc;
     box-shadow: 0 1px 3px #ccc;
-    z-index:9999;
+    z-index:999;
     background-color:#eaeaea;
     display:none;
 }
